infra/kubernetes/base/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: secureflow
  labels:
    app: frontend-service
    team: devsecops
spec:
  replicas: 1
  selector:
    matchLabels:
      svc: frontend
  template:
    metadata:
      labels:
        svc: frontend
      annotations:
        vault.hashicorp.com/agent-inject: "true"
        vault.hashicorp.com/role: "frontend-role"
        vault.hashicorp.com/agent-inject-secret-config: "secureflow/data/frontend"      
    spec:
      serviceAccountName: frontend-sa
      containers:
        - name: frontend
          image: secureflow/frontend:v1 #CK-06 remediated
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          # envFrom:
          #   - configMapRef:
          #       name: secureflow-config
          securityContext:
            privileged: false                # CK-04
            allowPrivilegeEscalation: false  # CK-04
            runAsNonRoot: true
            runAsUser: 10001
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL                   
          # CK-05 — no resources remeditated.
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: secureflow
spec:
  type: NodePort
  selector:
    svc: frontend
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30080
